# lx

./: .gitignore  .gitmodules  .mcp.json  .rustfmt.toml  CLAUDE.md  CODEBASE_DEVERBOSIFY.md  Cargo.toml  DIAGRAM.mmd  MERMAID_KNOWLEDGE.md  NEXT_PROMPT.md  PIPELINE.mmd  README.md  TESTING.md  TICK_PROTOCOL.md  UX_UI_DESIGN_UPDATE.md  VOICE_AUDIO_PLAYBACK_NOTES.md  WORKFLOW.mmd  WORKGEN.mmd  biome.json  claude.mmd  clippy.toml  justfile  lx.toml  mcp.justfile  mermaid.config.json  mermaid.css  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  reference  tsconfig.base.json
backends/dx/: Cargo.toml
backends/dx/assets/: style.css
backends/dx/src/: app.rs  event.rs  langfuse.rs  lib.rs  main.rs  runner.rs
backends/dx/src/adapters/: ansi.rs  http.rs  mod.rs  pty.rs  terminal_manager.rs  ws.rs
backends/dx/src/backends/: ai.rs  log.rs  mod.rs  shell.rs  user.rs  yield_.rs
backends/dx/src/components/: ai_call.rs  mod.rs  pane.rs  pane_manager.rs  toolbar.rs  user_prompt.rs
crates/browser-cdp/: Cargo.toml
crates/browser-cdp/src/: lib.rs
crates/dx-charts/: Cargo.toml
crates/dx-charts/src/: bar.rs  charming_wrapper.rs  empty_state.rs  expandable.rs  lib.rs  line.rs  pie.rs  scatter.rs  theme.rs  types.rs
crates/inference-client/: Cargo.toml
crates/inference-client/src/: lib.rs
crates/kokoro-client/: Cargo.toml
crates/kokoro-client/src/: lib.rs
crates/lx/: Cargo.toml
crates/lx-api/: Cargo.toml  TASK.md
crates/lx-api/src/: activity_api.rs  lib.rs  run_api.rs  types.rs  ws_events.rs
crates/lx-ast/: Cargo.toml
crates/lx-ast/src/: lib.rs  source.rs
crates/lx-ast/src/ast/: comment_attach.rs  expr_types.rs  mod.rs  types.rs
crates/lx-charts/: Cargo.toml
crates/lx-charts/src/: bar.rs  charming_wrapper.rs  expandable.rs  lib.rs  line.rs  pie.rs  scatter.rs  theme.rs  types.rs
crates/lx-checker/: Cargo.toml
crates/lx-checker/src/: capture.rs  check_expr.rs  diagnostics.rs  exhaust.rs  exhaust_core.rs  exhaust_types.rs  generics.rs  infer_pattern.rs  lib.rs  module_graph.rs  narrowing.rs  semantic.rs  stdlib_sigs.rs  synth_compound.rs  synth_control.rs  type_error.rs  type_ops.rs  types.rs  unification.rs  visit_stmt.rs
crates/lx-checker/tests/: checker_regressions.rs  semantic_signature_regressions.rs
crates/lx-cli/: Cargo.toml
crates/lx-cli/src/: agent_cmd.rs  ai_backend.rs  check.rs  fmt.rs  init.rs  install.rs  install_ops.rs  listing.rs  llm_backend.rs  lockfile.rs  main.rs  manifest.rs  plugin.rs  run.rs  testing.rs
crates/lx-cli/tests/: bug_probes.rs  plugin.rs  suite.rs
crates/lx-desktop/: Cargo.toml  Dioxus.toml  VOICE_PIPELINE_PLAN.md  build.rs  dioxus.schema.json  tailwind.css
crates/lx-desktop/assets/: divider.ts  dx-charts.js  fonts.css  index.ts  tailwind.css  terminal.ts  types.ts  voice-client.js  widget-bridge.js
crates/lx-desktop/docs/: agentic_bootstrap_prompt.md  agentic_feature_developer_value.md
crates/lx-desktop/src/: app.rs  lib.rs  main.rs  panes.rs  routes.rs  styles.rs  tailwind.css  ts_widget.rs  voice_backend.rs  webview_permissions.rs
crates/lx-desktop/ts/: package-lock.json
crates/lx-desktop/work_items/: AGENT_DRIVEN_PANE_REQUESTS.md  AGENT_PANE.md  BROWSER_PANE_CDP.md  BROWSER_PANE_IFRAME.md  CANVAS_WIDGETS.md  EDITOR_PANE_MONACO.md  GENERALIZE_PANE_NODE.md  NOTIFICATION_INDICATORS.md  PANE_CONVERSION.md  PANE_TOOLBAR.md  TAB_BAR_DROPDOWN.md
crates/lx-eval/: Cargo.toml
crates/lx-eval/src/: lib.rs  mcp_client.rs  mcp_stream_sink.rs  tool_module.rs
crates/lx-eval/std/: guard.lx
crates/lx-graph-editor/: Cargo.toml
crates/lx-graph-editor/src/: catalog.rs  commands.rs  dioxus.rs  history.rs  inspector.rs  lib.rs  model.rs  protocol.rs
crates/lx-linter/: Cargo.toml
crates/lx-linter/src/: lib.rs  rule.rs  runner.rs
crates/lx-linter/tests/: lint_regressions.rs  pipeline_regressions.rs
crates/lx-mobile/: Cargo.toml  Dioxus.toml
crates/lx-mobile/src/: api_client.rs  app.rs  components.rs  main.rs  tailwind.css  ws_client.rs
crates/lx-parser/: Cargo.toml
crates/lx-parser/tests/: surface_parse_regressions.rs
crates/lx-tui/: Cargo.toml
crates/lx-tui/src/: app.rs  event_loop.rs  input.rs  main.rs  ui.rs
crates/lx-ui/: Cargo.toml
crates/lx-ui/src/: components.rs  lib.rs  pane_tree.rs  pty_session.rs  tab_state.rs  ws_endpoint.rs  ws_types.rs
crates/lx-value/: Cargo.toml
crates/lx-value/src/: builtin_ctx.rs  env.rs  event_stream.rs  external_sink.rs  lib.rs  module_exports.rs  tool_module_handle.rs
crates/lx/src/: ast.rs  ast_display.rs  builtins.rs  checker.rs  env.rs  error.rs  event_stream.rs  interpreter.rs  iterator.rs  lib.rs  linter.rs  mcp_client.rs  mcp_stream_sink.rs  runtime.rs  source.rs  span.rs  stdlib.rs  sym.rs  token.rs  tool_module.rs  value.rs  value_display.rs  value_impls.rs
crates/lx/std/: agent.lx  collection.lx  connector.lx  guard.lx  prompt.lx  schema_trait.lx  session.lx  tool.lx  workflow.lx
crates/lx/tests/: formatter_roundtrip.rs
crates/nodeflow/: Cargo.toml  Dioxus.toml  build.rs  dioxus.schema.json
crates/nodeflow/assets/: charts.js  fonts.css  widget-bridge.js
crates/nodeflow/src/: app.rs  credentials.rs  lib.rs  main.rs  routes.rs
crates/pty-mux/: Cargo.toml
crates/pty-mux/src/: lib.rs  session.rs  ws_endpoint.rs
crates/voice-agent/: Cargo.toml
crates/voice-agent/src/: backend.rs  detector.rs  lib.rs  session.rs  types.rs
crates/widget-bridge/: Cargo.toml
crates/widget-bridge/src/: hook.rs  lib.rs
future_crates/lx-desktop/: Cargo.toml  Dioxus.toml
future_crates/lx-desktop/assets/: inject-css.ts  terminal.ts
future_crates/lx-desktop/docs/: agentic_tool_feature_matrix.md
future_crates/lx-desktop/src/: app.rs  main.rs  routes.rs  ts_widget.rs
future_crates/lx-desktop/ts/: package.json  tsconfig.json
future_crates/lx-desktop/work_items/: VOICE_AGENTS_PAGE_INTEGRATION.md  VOICE_PANE_REMOVAL.md
future_crates/lx-dx/: Cargo.toml  spec.md
future_crates/lx-dx/src/: event.rs  langfuse.rs  runner.rs
future_crates/lx-mobile/: Cargo.toml  Dioxus.toml
future_crates/lx-mobile/src/: api_client.rs  app.rs  routes.rs  ws_client.rs
(+2588 files in other folders)
