[workspace]
members = ["crates/lx", "crates/lx-cli"]
resolver = "2"

[workspace.package]
authors = ["Jeremy Meek"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Distortedlogic/lx"

[profile.dev.package."*"]
codegen-units = 1
debug = false
incremental = false
opt-level = "z"
strip = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
chrono = "0.4.44"
cron = { version = "0.15.0" }
dashmap = "6.1.0"
derive_more = { version = "2.1.1", features = ["deref", "display", "from", "try_from"] }
fastrand = "2"
logos = "0.16.1"
parking_lot = "0.12.5"
pulldown-cmark = "0.13.2"
regex = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
smart-default = "0.7"
strum = { version = "0.28.0", features = ["derive"] }
toml = "0.9.8"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
manual_let_else = "warn"
needless_pass_by_value = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
