[workspace]
members = [
  "crates/lx",
  "crates/lx-cli",
  "crates/pane-tree",
  "crates/pty-mux",
  "crates/widget-bridge",
  "crates/dx-charts",
  "crates/inference-client",
  "crates/whisper-client",
  "crates/kokoro-client",
  "crates/audio-core",
  "crates/voice-agent",
  "crates/lx-desktop",
  "crates/lx-macros",
  "crates/browser-cdp",
]
exclude = ["reference/chumsky"]
resolver = "2"

[workspace.package]
authors = ["Jeremy Meek"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Distortedlogic/lx"

[profile.dev.package."*"]
codegen-units = 1
debug = false
incremental = false
opt-level = "z"
strip = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
async-recursion = { version = "1.1.1" }
chrono = { version = "0.4.44" }
chumsky = { version = "0.12", features = ["pratt"] }
clap = { version = "4", features = ["derive"] }
cron = { version = "0.15.0" }
dashmap = { version = "6.1.0" }
ena = { version = "0.14" }
derive_more = { version = "2.1.1", features = ["deref", "display", "from", "try_from"] }
fastrand = { version = "2" }
futures = { version = "0.3.32" }
indexmap = { version = "2.13.0" }
itertools = { version = "0.14" }
la-arena = { version = "0.3.1" }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
logos = { version = "0.16.1" }
miette = { version = "7.6.0", features = ["fancy"] }
num-bigint = { version = "0.4.6" }
num-integer = { version = "0.1.46" }
num-traits = { version = "0.2.19" }
parking_lot = { version = "0.12.5" }
pulldown-cmark = { version = "0.13.2" }
regex = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
similar = { version = "2.7.0" }
smart-default = "0.7"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
toml = { version = "0.9.8" }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
manual_let_else = "warn"
needless_pass_by_value = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
