[workspace]
exclude = ["reference/chumsky"]
members = ["crates/lx", "crates/lx-api", "crates/lx-ast", "crates/lx-checker", "crates/lx-cli", "crates/lx-desktop", "crates/lx-desugar", "crates/lx-eval", "crates/lx-fmt", "crates/lx-linter", "crates/lx-macros", "crates/lx-mobile", "crates/lx-parser", "crates/lx-span", "crates/lx-value"]
resolver = "2"

[workspace.package]
authors = ["Jeremy Meek"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Distortedlogic/lx"

[profile.dev.package."*"]
codegen-units = 1
debug = false
incremental = false
opt-level = "z"
strip = true

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
async-recursion = { version = "1.1.1" }
async-trait = { version = "0.1.89" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.44" }
chumsky = { version = "0.12", features = ["pratt"] }
clap = { version = "4", features = ["derive"] }
cron = { version = "0.15.0" }
dashmap = { version = "6.1.0" }
derive_more = { version = "2.1.1", features = ["deref", "display", "from", "try_from"] }
dirs = { version = "6.0.0" }
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
ena = { version = "0.14" }
futures = { version = "0.3.32" }
indexmap = { version = "2.13.0" }
itertools = { version = "0.14" }
la-arena = { version = "0.3.1" }
lasso = { version = "0.7.3", features = ["multi-threaded"] }
logos = { version = "0.16.1" }
miette = { version = "7.6.0", features = ["fancy"] }
num-bigint = { version = "0.4.6" }
num-integer = { version = "0.1.46" }
num-traits = { version = "0.2.19" }
parking_lot = { version = "0.12.5" }
proc-macro2 = { version = "1" }
pulldown-cmark = { version = "0.13.2" }
quote = { version = "1" }
reqwest = { version = "0.13.2", features = ["json", "query"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-pcm", "symphonia-wav"] }
rustpotter = { version = "3.0.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
similar = { version = "2.7.0" }
smallvec = { version = "1" }
smart-default = { version = "0.7" }
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2", features = ["full"] }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29" }
toml = { version = "0.9.8" }
uuid = { version = "1.23.0", features = ["v4"] }
webkit2gtk = { version = "=2.0.1", features = ["v2_38"] }

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
manual_let_else = "warn"
needless_pass_by_value = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[patch.crates-io]
half = { git = "https://github.com/starkat99/half-rs", tag = "v2.3.1" }
