[package]
name = "browser-cdp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chromiumoxide = "0.9"
dashmap = "6"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
base64 = "0.22"
anyhow = "1"
