[package]
name = "dx-charts"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
charming = { git = "https://github.com/yuankunzhang/charming.git" }
dioxus = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
