[package]
name = "inference-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"
