[package]
name = "kokoro-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
inference-client = { path = "../inference-client" }
serde = { workspace = true }
serde_json = { workspace = true }
