[package]
name = "lx-charts"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
charming = { git = "https://github.com/yuankunzhang/charming.git" }
dioxus = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
