[package]
edition.workspace = true
license.workspace = true
name = "lx-checker"
version = "0.1.0"

[dependencies]
lx-span = { path = "../lx-span" }
lx-ast = { path = "../lx-ast" }
ena.workspace = true
itertools.workspace = true
la-arena.workspace = true
miette.workspace = true
num-bigint.workspace = true
similar.workspace = true

[dev-dependencies]
lx-desugar = { path = "../lx-desugar" }
lx-parser = { path = "../lx-parser" }

[lints]
workspace = true
