[package]
name = "lx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
lx = { path = "../lx" }
clap.workspace = true
miette.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
indexmap.workspace = true

[lints]
workspace = true
