[package]
name = "lx-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lx"
path = "src/main.rs"

[dependencies]
lx-ast = { path = "../lx-ast" }
lx-checker = { path = "../lx-checker" }
lx-desugar = { path = "../lx-desugar" }
lx-eval = { path = "../lx-eval" }
lx-fmt = { path = "../lx-fmt" }
lx-linter = { path = "../lx-linter" }
lx-parser = { path = "../lx-parser" }
lx-span = { path = "../lx-span" }
lx-value = { path = "../lx-value" }
clap.workspace = true
miette.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
indexmap.workspace = true

[lints]
workspace = true
