[package]
name = "lx-desktop"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "lx-desktop"
path = "src/main.rs"

[lib]
name = "lx_desktop"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
common-pane-tree = { path = "../../../dioxus-common/crates/common-pane-tree" }
common-pty = { path = "../../../dioxus-common/crates/common-pty" }
dioxus-widget-bridge = { path = "../../../dioxus-common/crates/dioxus-widget-bridge" }
dioxus-storage = { path = "../../../dioxus-common/crates/dioxus-storage" }
common-audio = { path = "../../../dioxus-common/crates/common-audio" }
common-whisper = { path = "../../../dioxus-common/crates/common-whisper" }
common-kokoro = { path = "../../../dioxus-common/crates/common-kokoro" }
common-voice = { path = "../../../dioxus-common/crates/common-voice" }
common-cdp = { path = "../../../dioxus-common/crates/common-cdp" }
common-charts = { path = "../../../dioxus-common/crates/common-charts" }
common-inference = { path = "../../../dioxus-common/crates/common-inference" }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
dioxus = { version = "0.7", features = ["fullstack", "router"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", optional = true }
dirs = { version = "6", optional = true }
webkit2gtk = { version = "=2.0.1", features = ["v2_38"], optional = true }

[features]
default = []
desktop = ["dioxus/desktop", "dep:webkit2gtk"]
server = ["dioxus/server", "dep:axum", "dep:dirs"]
