[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "lx-desktop"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "lx-desktop"
path = "src/main.rs"

[lib]
name = "lx_desktop"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
common-audio = { path = "../../../dioxus-common/crates/common-audio" }
common-cdp = { path = "../../../dioxus-common/crates/common-cdp" }
common-charts = { path = "../../../dioxus-common/crates/common-charts" }
common-inference = { path = "../../../dioxus-common/crates/common-inference" }
common-kokoro = { path = "../../../dioxus-common/crates/common-kokoro" }
common-pane-tree = { path = "../../../dioxus-common/crates/common-pane-tree" }
common-pty = { path = "../../../dioxus-common/crates/common-pty" }
common-voice = { path = "../../../dioxus-common/crates/common-voice" }
common-whisper = { path = "../../../dioxus-common/crates/common-whisper" }

lx-api = { path = "../lx-api", features = ["server"] }

anyhow = "1.0.102"
async-trait = "0.1.89"

base64 = "0.22.1"
dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-storage = { path = "../../../dioxus-common/crates/dioxus-storage" }
dioxus-widget-bridge = { path = "../../../dioxus-common/crates/dioxus-widget-bridge" }

futures = "0.3.32"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-pcm", "symphonia-wav"] }
rustpotter = "3.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
uuid = { version = "1.23.0", features = ["v4"] }

dirs = { version = "6.0.0", optional = true }

# @Claude 3/27/26 user note dioxus -> wry -> webkit2gtk
webkit2gtk = { version = "=2.0.1", features = ["v2_38"], optional = true }

[features]
default = []
desktop = ["dep:webkit2gtk", "dioxus/desktop"]
server = ["dep:dirs", "dioxus/server"]
