[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "lx-desktop"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "lx-desktop"
path = "src/main.rs"

[lib]
name = "lx_desktop"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
common-audio = { path = "../../../dioxus-common/crates/common-audio" }
common-cdp = { path = "../../../dioxus-common/crates/common-cdp" }
common-inference = { path = "../../../dioxus-common/crates/common-inference" }
common-kokoro = { path = "../../../dioxus-common/crates/common-kokoro" }
common-pane-tree = { path = "../../../dioxus-common/crates/common-pane-tree" }
common-pty = { path = "../../../dioxus-common/crates/common-pty" }
common-voice = { path = "../../../dioxus-common/crates/common-voice" }
common-whisper = { path = "../../../dioxus-common/crates/common-whisper" }

lx-api = { path = "../lx-api", features = ["server"] }

anyhow = { workspace = true }
async-trait = { workspace = true }

base64 = { workspace = true }
dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-storage = { path = "../../../dioxus-common/crates/dioxus-storage" }
dioxus-widget-bridge = { path = "../../../dioxus-common/crates/dioxus-widget-bridge" }

futures = { workspace = true }
rodio = { workspace = true }
rustpotter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
uuid = { workspace = true }

dirs = { workspace = true, optional = true }

webkit2gtk = { workspace = true, optional = true }

[features]
default = []
desktop = ["dep:webkit2gtk", "dioxus/desktop"]
server = ["dep:dirs", "dioxus/server"]
