[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "lx-graph-editor"
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true }
