[package]
edition.workspace = true
license.workspace = true
name = "lx-linter"
version = "0.1.0"

[dependencies]
lx-span = { path = "../lx-span" }
lx-ast = { path = "../lx-ast" }
lx-checker = { path = "../lx-checker" }
miette.workspace = true

[dev-dependencies]
lx-desugar = { path = "../lx-desugar" }
lx-fmt = { path = "../lx-fmt" }
lx-parser = { path = "../lx-parser" }

[lints]
workspace = true
