[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "lx-mobile"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "lx-mobile"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["mobile", "router"] }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { version = "1.23.0", features = ["js", "v4"] }

[lints]
workspace = true
