[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "lx-mobile"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "lx-mobile"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["mobile", "router", "fullstack"] }
lx-api = { path = "../lx-api" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
