[package]
name = "lx-ui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt"] }
dashmap = "6"
parking_lot = "0.12"
