[package]
edition.workspace = true
license.workspace = true
name = "lx"
version = "0.1.0"

[dependencies]
async-recursion.workspace = true
chrono.workspace = true
chumsky.workspace = true
cron.workspace = true
dashmap.workspace = true
derive_more.workspace = true
fastrand.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
la-arena.workspace = true
lasso.workspace = true
logos.workspace = true
miette.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
smart-default.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[lints]
workspace = true
