[package]
edition.workspace = true
license.workspace = true
name = "lx"
version = "0.1.0"

[dependencies]
lx-ast = { path = "../lx-ast" }
lx-desugar = { path = "../lx-desugar" }
lx-fmt = { path = "../lx-fmt" }
lx-macros = { path = "../lx-macros" }
lx-parser = { path = "../lx-parser" }
lx-span = { path = "../lx-span" }
async-recursion.workspace = true
chrono.workspace = true
chumsky.workspace = true
cron.workspace = true
dashmap.workspace = true
derive_more.workspace = true
ena.workspace = true
extism.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
la-arena.workspace = true
lasso.workspace = true
logos.workspace = true
miette.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
pulldown-cmark.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
smallvec.workspace = true
smart-default.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[lints]
workspace = true
