[package]
edition.workspace = true
license.workspace = true
name = "lx"
version = "0.1.0"

[dependencies]
lx-span = { path = "../lx-span" }
lx-ast = { path = "../lx-ast" }
lx-parser = { path = "../lx-parser" }
lx-desugar = { path = "../lx-desugar" }
lx-checker = { path = "../lx-checker" }
lx-linter = { path = "../lx-linter" }
lx-fmt = { path = "../lx-fmt" }
lx-value = { path = "../lx-value" }
lx-eval = { path = "../lx-eval" }

[lints]
workspace = true
