[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "nodeflow"
repository.workspace = true
version = "0.1.0"

[[bin]]
name = "nodeflow"
path = "src/main.rs"

[lib]
name = "nodeflow"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
lx-graph-editor = { path = "../lx-graph-editor" }

anyhow = { workspace = true }
async-trait = { workspace = true }

dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-primitives = { path = "../../../dioxus-common/crates/dioxus-primitives", features = ["desktop"] }
dioxus-storage = { path = "../../../dioxus-common/crates/dioxus-storage" }
dioxus-widget-bridge = { path = "../../../dioxus-common/crates/dioxus-widget-bridge" }

futures = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
uuid = { workspace = true }

argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
lettre = { workspace = true }
rand = { workspace = true }
rhai = { workspace = true }
rusqlite = { workspace = true }

dirs = { workspace = true }

webkit2gtk = { workspace = true, optional = true }

[features]
default = []
desktop = ["dep:webkit2gtk", "dioxus/desktop"]
server = ["dioxus/server"]
