[package]
name = "voice-agent"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audio-core = { path = "../audio-core" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures = { workspace = true }
kokoro-client = { path = "../kokoro-client" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
whisper-client = { path = "../whisper-client" }
