[package]
name = "widget-bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dioxus = "0.7"
uuid = { version = "1", features = ["v4"] }
