[package]
name = "lx-desktop"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lx-desktop"
path = "src/main.rs"

[dependencies]
lx = { path = "../lx" }
lx-dx = { path = "../lx-dx" }
lx-ui = { path = "../lx-ui" }
dioxus = { version = "0.7", features = ["desktop", "router"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
lx-charts = { path = "../lx-charts" }
