[package]
name = "lx-dx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
lx = { path = "../lx" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tokio-tungstenite = "0.24"
futures = "0.3"
parking_lot = "0.12"
