[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "lx-mobile"
version = "0.1.0"

[[bin]]
name = "lx-mobile"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true, features = ["mobile", "router"] }
futures = "0.3.32"
lx-dx = { path = "../lx-dx" }
lx-ui = { path = "../lx-ui" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync"] }
tokio-tungstenite = "0.29.0"
uuid = { version = "1.23.0", features = ["v4"] }
